<?xml version="1.0"?>
<package format="3">
  <name>aisle_flight</name>
  <version>0.0.1</version>
  <description>MAVROS bridge: VIO->vision_pose relay, trajectory->setpoint bridge, EKF origin setter, VIO health monitor (diagram 3)</description>
  <maintainer email="xavier@example.com">xavier</maintainer>
  <license>Proprietary</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>geographic_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
