<?xml version="1.0"?>
<package format="3">
  <name>aisle_localization</name>
  <version>0.0.1</version>
  <description>cuVGL relocalization + cuVSLAM map loading (diagram 2)</description>
  <maintainer email="xavier@example.com">xavier</maintainer>
  <license>Proprietary</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ros2launch</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
